# MCAN

./: .gitignore  bootloader.py  canconfig.py  config.json  grafana.py  mcan.py  mcan_bootloader.py  mcan_curses.py  mcan_dash.py  mcan_outputs.py  mcan_test.py  mcan_tkinter.py  mcan_utils.py  pyproject.toml  requirements.txt  sources.py
inputs/: logsensor.pcap
src/mcan/: __init__.py  bootloader.py  mcan.py  mcan_bootloader.py  mcan_dash.py  mcan_main.py  mcan_utils.py  sources.py
