[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcan"
description = "MCan viewer"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0" }
dependencies = [
    "cantools",
    "pyserial"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/RITRacingSoftware/MCAN"

[tool.setuptools.packages.find]
where = ["src"]

